--- a/backend-for-whatsapp/templates/index.html
+++ b/backend-for-whatsapp/templates/index.html
@@ -338,7 +338,7 @@
             <div data-modal id="modal-credentials" class="bx--modal" role="dialog" aria-modal="true" aria-labelledby="modal-credentials-label" aria-describedby="modal-credentials-heading" tabindex="-1">
                 <div class="bx--modal-container">
                     <div class="bx--modal-header">
-                        <p class="bx--modal-header__label bx--type-delta" id="modal-credentials-label">Step 2: Add Watson Machine Learning service to the Application</p>
+                        <p class="bx--modal-header__label bx--type-delta" id="modal-credentials-label">Step 2: Add Watson service to the Application</p>
                         <p class="bx--modal-header__heading bx--type-beta" id="modal-credentials-heading">
                         </p>
                         <button class="bx--modal-close" type="button" data-modal-close aria-label="close modal">
